--- a/sass/style.css
+++ b/sass/style.css
@@ -6,25 +6,37 @@
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+*::-moz-selection {
+  color: #ff3115;
+}
+
+*::selection {
+  color: #ff3115;
+}
+
 a {
   text-decoration: none;
 }
 
-.col-4,
-.col-7 {
-  padding: 0 !important;
+li {
+  list-style: none;
+}
+
+.p-a {
+  position: absolute;
+}
+
+.p-r {
+  position: relative;
 }
 
 .color-orange {
   color: #ff3115;
 }
 
-.color-darkorange {
-  color: #E41F05;
-}
-
-.color-dark {
-  color: #111111;
+.col-4,
+.col-7 {
+  padding: 0 !important;
 }
 
 .social-icons {
@@ -124,6 +136,9 @@ a {
 
 .nav-logo a {
   color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .nav-logo i {
@@ -161,11 +176,11 @@ a {
   cursor: pointer;
 }
 
-.footer-nav {
+nav {
   background-color: #111111;
 }
 
-.footer-nav .row {
+nav .footer-nav .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -177,49 +192,425 @@ a {
           align-items: center;
 }
 
-.footer-nav ul {
-  list-style: none;
+nav .footer-nav .row .col-7 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
 
-.footer-nav ul li a {
+nav .footer-nav .row .col-7 .navbar-items {
   color: #888888;
-  padding: 19px 0;
-}
-
-.footer-nav ul li:first-child a {
-  color: #ff3115;
-}
-
-.footer-nav ul a {
+  padding: 24px 0;
   text-transform: uppercase;
 }
 
-.footer-nav ul a:hover {
+nav .footer-nav .row .col-7 .navbar-items:hover {
   color: #ff3115;
 }
 
-.footer-nav .footer-nav-icons {
+nav .footer-nav .row .footer-nav-icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.footer-nav .footer-nav-icons i {
+nav .footer-nav .row .footer-nav-icons i {
   color: white;
-  padding: 14px;
+  padding: 19px 14px;
 }
 
-.footer-nav .footer-nav-icons i:first-child {
+nav .footer-nav .row .footer-nav-icons i:first-child {
   background-color: #E41F05;
 }
 
-.footer-nav .footer-nav-icons i:last-child {
+nav .footer-nav .row .footer-nav-icons i:last-child {
   background-color: #ff3115;
+}
+
+/*Dropdowns*/
+nav .home-button {
+  position: relative;
+}
+
+nav .footer-nav .col-7 a {
+  width: 285px;
+  padding: 12px;
+}
+
+nav .footer-nav .col-7 ul {
+  padding: 0 !important;
+}
+
+nav .footer-nav .col-7 ul .home-dropdown {
+  position: absolute;
+  top: 25px;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+nav .footer-nav .col-7 ul .home-dropdown li {
+  background-color: #111111;
+  padding: 10px 5px;
+}
+
+nav .footer-nav .col-7 ul .home-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .col-7 ul .about-dropdown {
+  position: absolute;
+  top: 25px;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+nav .footer-nav .col-7 ul .about-dropdown li {
+  padding: 10px 5px;
+  background-color: #111111;
+}
+
+nav .footer-nav .col-7 ul .about-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .col-7 .pages-dropdown {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  top: 100%;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+nav .footer-nav .col-7 .pages-dropdown li {
+  padding: 15px 10px;
+  width: 258px;
+}
+
+nav .footer-nav .col-7 .pages-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .col-7 .page {
+  position: relative;
+}
+
+nav .footer-nav .col-7 .page-hover:hover .pages-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .col-7 .events-dropdown {
+  display: none;
+  opacity: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  top: 100%;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+nav .footer-nav .col-7 .events-dropdown li {
+  padding: 15px 10px;
+}
+
+nav .footer-nav .col-7 .events-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .event {
+  position: relative;
+}
+
+nav .footer-nav .events-hover:hover .events-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 1;
+}
+
+nav .footer-nav .teachers-dropdown {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+nav .footer-nav .teachers-dropdown li {
+  width: 285px;
+}
+
+nav .footer-nav .teachers {
+  position: relative;
+}
+
+nav .footer-nav .teachers:hover .teachers-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .gallery-dropdown {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+nav .footer-nav .gallery-dropdown li {
+  width: 285px;
+}
+
+nav .footer-nav .gallery {
+  position: relative;
+}
+
+nav .footer-nav .gallery:hover .gallery-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .shop-dropdown {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+nav .footer-nav .shop-dropdown li {
+  width: 285px;
+}
+
+nav .footer-nav .shop-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .shop {
+  position: relative;
+}
+
+nav .footer-nav .shop:hover .shop-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .mega-dropdown {
+  display: none;
+  background-color: #111111;
+  position: absolute;
+  top: 100%;
+  padding: 20px 30px;
+  -webkit-transition: 5s;
+  transition: 5s;
+}
+
+nav .footer-nav .mega-dropdown ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+nav .footer-nav .mega-dropdown ul li {
+  margin: 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+nav .footer-nav .mega-dropdown ul li a {
+  padding: 15px 25px;
+  color: #888888;
+}
+
+nav .footer-nav .mega {
+  position: relative;
+}
+
+nav .footer-nav .mega-hover:hover .mega-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .courses-dropdown {
+  display: none;
+  top: 100%;
+  background-color: #111111;
+  -webkit-transition: 2s;
+  transition: 2s;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+}
+
+nav .footer-nav .courses-dropdown li {
+  padding: 15px 10px;
+}
+
+nav .footer-nav .courses-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .courses {
+  position: relative;
+}
+
+nav .footer-nav .courses-hover:hover .courses-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .blog-dropdown {
+  display: none;
+  top: 100%;
+  background-color: #111111;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+}
+
+nav .footer-nav .blog-dropdown li {
+  padding: 15px 10px;
+}
+
+nav .footer-nav .blog-dropdown li a {
+  color: #888888;
+}
+
+nav .footer-nav .blog {
+  position: relative;
+}
+
+nav .footer-nav .blog-hover:hover .blog-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .home:hover .home-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .footer-nav .about:hover .about-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #111111;
+}
+
+.modal .close-circle {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  color: white;
+  cursor: pointer;
+  font-size: 30px;
+}
+
+.modal div {
+  width: 80%;
+  margin: 22% auto;
+}
+
+.modal div input {
+  width: 70%;
+  margin: auto 15%;
+  padding: 20px;
+  border: none;
+  border-bottom: 2px solid #888888;
+  font-size: 19px;
+}
+
+.footer-nav .container .row .col-7 a:hover {
+  color: #ff3115;
 }
 /*# sourceMappingURL=style.css.map */
