--- a/sass/style.css
+++ b/sass/style.css
@@ -663,21 +663,214 @@ nav .footer-nav .about:hover .about-dropdown {
 
 #section-info-cards {
   z-index: 10;
-  height: 50vh;
+}
+
+#section-info-cards .row {
+  margin-top: -60px;
 }
 
 #section-info-cards .row .col-3 {
-  color: white;
+  text-align: center;
+  z-index: 20;
+  position: relative;
 }
 
-#section-info-cards .row .div-icon {
-  background-color: #111111;
+#section-info-cards .row .col-3:hover .div-text {
+  background-color: #ff3115;
+}
+
+#section-info-cards .row .div-icons {
+  width: 110px;
+  height: 100px;
   border-radius: 50%;
-  padding: 40px;
+  background: #111111;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: -28%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 55;
 }
 
-#section-info-cards .row .div-icon i {
+#section-info-cards .row i {
   color: #ff3115;
+  font-size: 35px;
+  position: absolute;
+}
+
+#section-info-cards .row .col-3:hover i {
+  color: white;
+  -webkit-animation: scale 2s;
+          animation: scale 2s;
+}
+
+#section-info-cards .row .col-3:hover .div-icons {
+  background-color: #ff3115;
+}
+
+#section-info-cards .row .div-text {
+  text-align: center;
+  background-color: black;
+  padding: 30px 10px;
+  padding-top: 60px;
+}
+
+#section-info-cards .row .div-text h3 {
+  color: white;
+  margin-bottom: 10px;
+}
+
+#section-info-cards .row .div-text p {
+  color: #888888;
+}
+
+@-webkit-keyframes scale {
+  0% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+#section-aboutus {
+  margin: 100px 0;
+}
+
+#section-aboutus .row-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#section-aboutus .row-flex h2 {
   font-size: 40px;
+  margin-bottom: 20px;
+}
+
+#section-aboutus .row-flex p {
+  color: #888888;
+}
+
+#section-aboutus .row-flex hr {
+  width: 10%;
+  margin-top: 25px;
+  border-color: #ff3115;
+}
+
+#section-aboutus .div-about-video {
+  position: relative;
+}
+
+#section-aboutus .div-about-video .div-playicon {
+  position: absolute;
+  color: #ff3115;
+  font-size: 80px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+#section-aboutus .div-about-video:hover i {
+  -webkit-animation: opacityanim 2s;
+          animation: opacityanim 2s;
+}
+
+#section-aboutus .div-row-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+}
+
+#section-aboutus .div-row-info .div-about-video img {
+  width: 100%;
+}
+
+#section-aboutus .div-row-info-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+#section-aboutus .div-row-info-text h3 {
+  margin-bottom: 15px;
+  font-size: 25px;
+}
+
+#section-aboutus .div-row-info-text p {
+  color: #888888;
+  padding: 20px 0;
+}
+
+#section-aboutus .div-row-info-text .accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  -webkit-transition: 2s;
+  transition: 2s;
+  margin: 10px 0;
+}
+
+#section-aboutus .div-row-info-text .panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
+#section-aboutus .div-row-info-text button {
+  font-size: 20px;
+}
+
+.accordion-color {
+  color: white;
+  background-color: #ff3115;
 }
 /*# sourceMappingURL=style.css.map */
