--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,10 @@
     color: #ff3115;
 }
 
+.flex {
+    display: flex;
+}
+
 a {
     text-decoration: none;
 }
@@ -30,8 +34,7 @@ li {
 }
 
 .col-4,
-.col-7,
-{
+.col-7 {
     padding: 0 !important;
 }
 
@@ -548,7 +551,7 @@ nav {
         .col-3:hover i {
             color: white;
             // background-color: #ff3115;
-            animation: scale 2s;
+            animation: scale 1s;
         }
         .col-3:hover .div-icons {
             background-color: #ff3115;
@@ -655,8 +658,12 @@ nav {
             text-align: left;
             border: none;
             outline: none;
-            transition: 2s;
+            transition: 1s;
             margin: 10px 0;
+        }
+        .active {
+            background-color: #ff3115;
+            color: white;
         }
         .panel {
             padding: 0 18px;
@@ -675,3 +682,269 @@ nav {
     color: white;
     background-color: #ff3115;
 }
+
+#popular-courses,
+{
+    .row {
+        position: relative;
+        .owl-prev i {
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: -50px;
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
+            color: white;
+            background-color: #444;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 1s;
+            cursor: pointer;
+        }
+        .owl-next i {
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: -50px;
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
+            color: white;
+            background-color: #444;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 1s;
+            cursor: pointer;
+        }
+    }
+    .row:hover i {
+        opacity: 1;
+    }
+    .owl-prev i:hover {
+        background-color: #ff3115;
+    }
+    .owl-next i:hover {
+        background-color: #ff3115;
+    }
+    .popular-courses-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 15px;
+        p {
+            margin: 15px 0;
+        }
+        hr {
+            width: 10%;
+            border-color: #ff3115;
+        }
+    }
+    background-color: #f9f9f9;
+    .card {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 15px;
+        // box-shadow: rgba(0, 0, 0, 0.37) 1px;
+        .div-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 15px;
+            a:first-child {
+                font-size: 15px;
+                margin-bottom: 10px;
+                color: #ff3115;
+            }
+            a:nth-child(2) {
+                color: black;
+                font-size: 25px;
+                margin-bottom: 15px;
+            }
+            .card-rating {
+                display: flex;
+                ul {
+                    margin-right: 20px;
+                    li {
+                        color: #ff3115;
+                    }
+                }
+            }
+            p {
+                text-align: center;
+                color: #888888;
+                margin-top: 15px;
+            }
+        }
+        .course-footer {
+            padding: 15px 20px;
+            display: flex;
+            justify-content: space-between;
+            div {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                span:first-child {
+                    font-weight: bold;
+                }
+                span:nth-child(2) {
+                    font-size: 15px;
+                }
+            }
+        }
+        .course-value {
+            position: absolute;
+            bottom: -25px;
+            right: 25px;
+            top: 50%;
+            height: 50px;
+            width: 50px;
+            line-height: 50px;
+            text-align: center;
+            background-color: #ff3115;
+            color: #ffffff;
+            font-size: 14px;
+            font-weight: 600;
+            border-radius: 50%;
+            z-index: 1;
+        }
+    }
+}
+
+#section-acheivements {
+    background-image: url(../images/counter-bg.jpg);
+    .container {
+        .div-row-acheivements {
+            padding: 130px 0;
+            .div-acheivements {
+                h2 {
+                    color: white;
+                    font-size: 32px;
+                }
+                p {
+                    color: #888888;
+                    margin: 30px 0;
+                }
+                img {
+                    width: 100%;
+                    border-radius: 8px;
+                }
+            }
+            .div-counters {
+                padding-top: 90px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                .row {
+                    display: flex;
+                    margin-right: -15px;
+                    margin-left: -15px;
+                }
+                p {
+                    color: white;
+                    font-size: 25px;
+                }
+                .col-6 {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+                    border: 1px solid #888888;
+                    height: 150px;
+                }
+                .col-6:hover {
+                    border-color: #ff3115;
+                }
+            }
+        }
+    }
+}
+
+#section-events {
+    .row {
+        display: flex;
+        justify-content: center;
+        margin: 20px 0;
+        .events-header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            h2 {
+                font-size: 25px;
+            }
+            p {
+                color: #888888;
+                margin: 15px 0;
+            }
+            hr {
+                border-color: #ff3115;
+                width: 10%;
+            }
+        }
+        i {
+            color: #ff3115;
+            font-size: 14px;
+        }
+        .card {
+            margin: 0 5px;
+        }
+        .card-text {
+            background-color: #f9f9f9;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            padding: 15px 10px;
+            i {
+                margin-right: 5px;
+                display: flex;
+                align-items: center;
+            }
+            .event-date {
+                display: flex;
+                justify-content: left;
+            }
+            .first-a {
+                color: #111111;
+                margin-top: 15px;
+                font-weight: bold;
+                transition: 0.5s;
+            }
+            .first-a:hover {
+                color: #ff3115;
+            }
+            .card-body-clock {
+                display: flex;
+                margin: 15px 0;
+                div {
+                    display: flex;
+                    justify-content: left;
+                }
+                div:first-child {
+                    margin-right: 10px;
+                }
+            }
+            .footer-button {
+                display: flex;
+                align-items: center;
+                a {
+                    margin-right: 5px;
+                    color: #ff3115;
+                }
+            }
+        }
+        p,
+        span {
+            color: #888888;
+            font-size: 15px;
+        }
+    }
+}
+
+#section-experienced-staff {}
